--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <li>セキュリティ・運用設計、リスクアセスメント、インプリメンテーション</li>
       <li>Google Workspace/Okta/Intune/Jamf/mac/Windows/EDR</li>
     </ul>
-    <h3>2020-2021 @ 日本マイクロソフト As Customer Support Engineering</h3>
+    <h3>2020-2021 @ 日本マイクロソフト As Customer Support Engineer</h3>
     <ul>
-      <li>自社ソリューションのPremier/Unifiedカスタマーサポート エンジニアリング
+      <li>自社ソリューションのPremier/Unifiedカスタマーサポート エンジニア</li>
       <li>MIP a.k.a Azure Information Protection/ f.k.a AD-RMS</li>
       <li>Azure ATP a.k.a Microsoft Defender for Identity/ f.k.a ATA </li>
       <li>Windows Server/Azure AD/TroubleShooting/MCAS</li>
@@ -39,7 +39,7 @@
     <ul>
       <li>お客様向けセキュアインターネット接続サービス、リモートアクセスサービスの運用・維持管理、および導入提案、導入 </li>
       <li>お客様環境のグループ会社セキュリティ共通基盤の設計・コンサルティング</li>
-      <li>お客様向けSOCサービスの提供、セキュリティイベントのTier 2監視・分析</li>
+      <li>お客様向けSOCサービスの提供、セキュリティ イベントのTier 2監視・分析</li>
       <li>WAF/IDS/IPS/Firewall/MailGW Proxy/WebGW Proxy/DDoS Mitigation</li>
       <li>オンライントレードサイトや電子マネー決済サイト、事故受付などミッションクリティカルシステムや、5 万ユーザ規模のコーポレート IT 環境のおけるセキュリティデバイスの 24/365 に渡る運用・監視など</li>
     </ul>
