open new window with link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       <li>Microsoft Certified: Azure Fundamentals</li>
       <li>MCSA windows server 2016</li>
     </ul>
-    <a href="https://www.credly.com/users/ginji-hayashi"><button>credly budges</button></a>
+    <a href="https://www.credly.com/users/ginji-hayashi" target="_blank" rel="noopener noreferrer">
+      <button>credly budges</button></a>
     <h2>講演・執筆</h2>
     <ul>
       <li>野村総合研究所刊行 IT ソリューションフロンティア 「テレワーク時代のサイバーセキュリティ」寄稿</li>
