--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <h1>Bio</h1>
     <p>Ginji Hayashi <kbd>@ghayashi</kbd></p>
     <img src="ghayashi2.jpg" />
-    </right>
+    <p><a href="https://www.linkedin.com/in/ginji/">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-linkedin"
+          viewBox="0 0 16 16">
+          <path
+            d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+        </svg>
+        linkedin (ginji)</a></p>
   </header>
   <main>
     <h2>career</h2>
@@ -22,6 +28,12 @@
       <li>自社コーポレートITシステムに対するセキュリティエンジニアリング</li>
       <li>セキュリティ・運用設計、リスクアセスメント、インプリメンテーション</li>
       <li>Google Workspace/Okta/Intune/Jamf/mac/Windows/EDR</li>
+      <li>Blog Article :</li>
+      <a href="https://mercan.mercari.com/articles/35729/">
+        ビジネスを拡大するために最強のIT環境をつくる。メルカリの“働くを下支え”する Corporate IT Security #MercariSecurityPrivacy
+      </a><br />
+      <a href="https://github.com/g-hayashi" target="_blank" rel="noopener noreferrer">
+        <button>github on my company account</button></a><br />
     </ul>
     <h3>2020-2021 @ 日本マイクロソフト As Customer Support Engineer</h3>
     <ul>
@@ -40,7 +52,7 @@
       <li>お客様向けセキュアインターネット接続サービス、リモートアクセスサービスの運用・維持管理、および導入提案、導入 </li>
       <li>お客様環境のグループ会社セキュリティ共通基盤の設計・コンサルティング</li>
       <li>お客様向けSOCサービスの提供、セキュリティ イベントのTier 2監視・分析</li>
-      <li>WAF/IDS/IPS/Firewall/MailGW Proxy/WebGW Proxy/DDoS Mitigation</li>
+      <li>WAF/IDS/IPS/Firewall/MailGW Proxy/WebGW Proxy/DDoS Mitigation/linux/perl/solaris</li>
       <li>オンライントレードサイトや電子マネー決済サイト、事故受付などミッションクリティカルシステムや、5 万ユーザ規模のコーポレート IT 環境のおけるセキュリティデバイスの 24/365 に渡る運用・監視など</li>
     </ul>
     <h2>certification</h2>
