--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <li>Corporate IT Security</li>
       <li>自社コーポレートITシステムに対するセキュリティエンジニアリング</li>
       <li>セキュリティ・運用設計、リスクアセスメント、インプリメンテーション</li>
-      <li>Google Workspace/Okta/Intune/Jamf/mac/Windows/EDR</li>
+      <li>Google Workspace/Okta/Intune/Jamf/mac/Windows/EDR/Netskope</li>
+      <li>Amazon AppStreamを利用したVDI導入プロジェクトのテクニカルリード</li>
       <li>Blog Article :</li>
       <a href="https://mercan.mercari.com/articles/35729/">
         ビジネスを拡大するために最強のIT環境をつくる。メルカリの“働くを下支え”する Corporate IT Security #MercariSecurityPrivacy
