--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Bio</h1>
-    <p>Ginji Hayashi <kbd>@ghayashi</kbd></p>
+    <p>Ginji Hayashi (林　吟志) <kbd>@ghayashi</kbd></p>
     <img src="ghayashi2.jpg" />
     <p><a href="https://www.linkedin.com/in/ginji/">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-linkedin"
