--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
   <main>
     <h2>career</h2>
-    <h3>2021 - @ メルカリ as Security Engineer</h3>
+    <h3>2021 - 2023 @ メルカリ as Security Engineer</h3>
     <ul>
       <li>Corporate IT Security</li>
       <li>自社コーポレートITシステムに対するセキュリティエンジニアリング</li>
