--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         ビジネスを拡大するために最強のIT環境をつくる。メルカリの“働くを下支え”する Corporate IT Security #MercariSecurityPrivacy
       </a><br />
       <a href="https://github.com/g-hayashi" target="_blank" rel="noopener noreferrer">
-        <button>github on my company account</button></a><br />
+        <button>github</button></a><br />
     </ul>
     <h3>2020-2021 @ 日本マイクロソフト As Customer Support Engineer</h3>
     <ul>
