modify snowbard to スノーボード

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </path>
               <path fill="#FFF" d="M20 31L20 17 32 24z"></path>
             </svg>
-            Youtube ChannelでSnowboard関連動画を作成・公開しています</a>
+            Youtube Channelでスノーボード関連動画を作成・公開しています</a>
         </div>
       </li>
     </ul>
