--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <kbd>@ghayashi</kbd>
       </div>
       <div style="display:inline-block;text-align: left; padding: 20px; ">
-        <div>セキュリティの専門家として、ビジネスに寄り添った、最適なITセキュリティ環境を提供します。</div>
+        <div>最寄りのセキュリティ専門家として、ビジネスに寄り添った、最適なITセキュリティ環境を実現します。</div>
         <ul>
-        <li><strong>アドバイザリー:</strong> 専門家の視点から潜在的なリスクを検討し、具体的な対策を提案します。<br>過去の経験や他社事例を踏まえ、特定ベンダや特定の解決策にとらわれない、ニュートラルな立場でお答えします</li>
-        <li><strong>ITコンサルティング:</strong> Google Workspace, Okta, Azure等を活用した、効果的で無理のない、IT環境の設計・構築を支援します。</li>
+        <li><strong>アドバイザリー:</strong> 多くの企業様と接してきた経験を生かし、専門家の視点から潜在リスクを検討し、具体的な対策を提案します。</li>
+        <li><strong>ITコンサルティング:</strong>特定ベンダや特定の解決策にとらわれず、効果的で無理のない、IT環境の設計・構築を支援します。</li>
         <li><strong>技術顧問・壁打ち:</strong> 技術選定やアーキテクチャに関する相談相手となり、意思決定をサポートします。</li>
-        <li><strong>執筆・講演:</strong> セキュリティに関する専門的な内容を、分かりやすく解説します。</li>
+        <li><strong>執筆・勉強会:</strong> セキュリティに関する専門的な内容を、分かりやすく解説します。</li>
         </ul>
         <div>お気軽にお声掛けください！</div>
       <div style="display:flex;justify-content: center; gap: 40px; margin: 16px 0;">
