--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <body>
   <header>
     <h1>Ginji Hayashi (林 吟志) Portfolio</h1>
-    <div style="display:flex;justify-content: center;">
       <div style="display:inline-block;"><br>
         <img src="ghayashi2.png" style="width: 100%; max-width: 300px;" /><br />
         <kbd>@ghayashi</kbd>
@@ -69,18 +68,16 @@
             </svg>
             お問い合わせ</a>
         </div>
-      </div>
     </div>
   </header>
   <main>
-    <h2>現在の契約形態について</h2>
-      <p>お仕事・案件をご依頼いただく際に、現状締結させていただくことが多い条件は以下の通りです。<br>
-        まずはお気軽に相談・雑談ベースでお話しさせてください。</p>
+    <h2>主な契約形態について</h2>
+      <p>案件をご依頼いただく際、お願いすることの多い条件です。まずはお気軽に相談・雑談ベースでお話しさせてください。</p>
       <ul>
         <li>柔軟に対応するため準委任契約での契約を基本としております。</li>
-        <li>ご依頼タスクから想定される稼働時間、または実働時間に基づいた時間単位でのご請求での契約が多いです。</li>
+        <li>想定されるタスクごとの稼働時間、または実働時間に基づく、時間単位での請求が多いです。</li>
         <li>時間単価は対応内容やご契約により変動します。</li>
-        <li>スポットでのご支援や、非同期でのコミュニケーション、週1〜3日程度の稼働をメインとしています。</li>
+        <li>スポットでのご支援や、非同期コミュニケーション、週1〜3日程度の稼働をメインとしています。</li>
       </ul>
     <h2>career</h2>
     <h3>2023- Freelance (as self-employee)</h3>
@@ -119,7 +116,8 @@
       <li>Corporate IT Security</li>
       <li>自社コーポレートITシステムに対するセキュリティエンジニアリング</li>
       <li>セキュリティ・運用設計、リスクアセスメント、インプリメンテーション</li>
-      <li>Google Workspace/Okta/Intune/Jamf/mac/Windows/EDR/Netskope</li>
+      <li>Google Workspace/Okta/Intune/Jamf</li>
+      <li>mac/Windows/EDR/Netskope</li>
       <li>Amazon AppStreamを利用したVDI導入プロジェクトのテクニカルリード</li>
       <li>Blog Article :</li>
       <a href="https://mercan.mercari.com/articles/35729/">
