--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
           <li>AWSを利用したログ収集基盤の評価・検証</li>
           <li>EDR, CASBソリューションの運用・監視支援</li>
           <li>デバイスキッティングの整備、運用スクリプトの開発</li>
-          <li>既存自動化ボットの改修、AIを利用したWebアプリ開発 など</li>
+          <li>DMARC対応などメールセキュリティ強化、メール環境移行</li>
+          <li>Webサイトホスティングの効率化、WAF導入</li>
+          <li>既存自動化ボットの改修、AIを利用したWebアプリ開発 などなど</li>
         </ul>
         <img src="zt.png" style="width: 100%; max-width: 600px;" /><br />
         </li>
